--- a/src/main/resources/loginRolePage.fxml
+++ b/src/main/resources/loginRolePage.fxml
@@ -18,7 +18,7 @@
 
 <AnchorPane fx:id="loginRolePage" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #02462f;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pharma.controllers.loginRolePage">
    <children>
-      <AnchorPane layoutX="15.0" layoutY="125.0" maxWidth="-Infinity" prefHeight="413.0" prefWidth="866.0" style="-fx-background-color: #b5fcca;">
+      <AnchorPane layoutX="15.0" layoutY="125.0" maxWidth="-Infinity" prefHeight="413.0" prefWidth="866.0" style="-fx-background-color: linear-gradient(to top, #b6fcca,#f7faf9);">
          <children>
             <Text layoutX="12.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Choose Your Role" textAlignment="CENTER" wrappingWidth="841.6000516891477">
                <font>
@@ -64,7 +64,7 @@
                         <Font name="Berlin Sans FB Demi Bold" size="17.0" />
                      </font>
                   </Button>
-                  <ImageView fitHeight="124.0" fitWidth="130.0" layoutX="52.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="image1" fitHeight="124.0" fitWidth="130.0" layoutX="52.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@images/icon-admin.png" />
                      </image>
@@ -93,7 +93,7 @@
                         <Font name="Berlin Sans FB Demi Bold" size="17.0" />
                      </font>
                   </Button>
-                  <ImageView fitHeight="124.0" fitWidth="130.0" layoutX="59.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="image3" fitHeight="124.0" fitWidth="130.0" layoutX="59.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@images/salesperson.png" />
                      </image>
@@ -122,7 +122,7 @@
                         <Font name="Berlin Sans FB Demi Bold" size="17.0" />
                      </font>
                   </Button>
-                  <ImageView fitHeight="124.0" fitWidth="130.0" layoutX="49.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="image2" fitHeight="124.0" fitWidth="130.0" layoutX="49.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@images/manager.jpg" />
                      </image>
@@ -187,7 +187,7 @@
             </LinearGradient>
          </fill>
       </Text>
-      <AnchorPane layoutX="14.0" layoutY="550.0" prefHeight="36.0" prefWidth="866.0" style="-fx-background-color: #b6fcca;">
+      <AnchorPane layoutX="14.0" layoutY="550.0" prefHeight="36.0" prefWidth="866.0" style="-fx-background-color: linear-gradient(to top, #b6fcca,#f7faf9);">
          <children>
             <ImageView fitHeight="36.0" fitWidth="40.0" layoutX="766.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -314,7 +314,7 @@
             </ImageView>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="14.0" layoutY="79.0" prefHeight="36.0" prefWidth="866.0" style="-fx-background-color: #b6fcca;">
+      <AnchorPane layoutX="14.0" layoutY="79.0" prefHeight="36.0" prefWidth="866.0" style="-fx-background-color: linear-gradient(to top, #b6fcca,#f7faf9);">
          <children>
             <ImageView fx:id="apatotoCheck2" fitHeight="30.0" fitWidth="30.0" layoutX="814.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
                <image>
