--- a/src/main/resources/managerLogin.fxml
+++ b/src/main/resources/managerLogin.fxml
@@ -20,7 +20,7 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #02462f;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pharma.controllers.managerLogin">
    <children>
-      <ImageView fitHeight="279.0" fitWidth="366.0" layoutX="98.0" layoutY="236.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="designImage" fitHeight="279.0" fitWidth="366.0" layoutX="98.0" layoutY="236.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@images/Pharmacist-Vector-removebg-preview.png" />
          </image>
