--- a/src/main/resources/salesmanLogin.fxml
+++ b/src/main/resources/salesmanLogin.fxml
@@ -17,7 +17,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #02462f;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pharma.controllers.salesmanLogin">
    <children>
       <AnchorPane layoutX="476.0" layoutY="115.0" prefHeight="420.0" prefWidth="328.0" style="-fx-background-color: green;">
@@ -201,7 +200,7 @@
             </LinearGradient>
          </fill>
       </Rectangle>
-      <ImageView fitHeight="245.0" fitWidth="322.0" layoutX="112.0" layoutY="263.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="designImage" fitHeight="245.0" fitWidth="322.0" layoutX="112.0" layoutY="263.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@images/Pharmacist-Vector-removebg-preview.png" />
          </image>
