--- a/src/main/resources/adminAddRmvBrunch.fxml
+++ b/src/main/resources/adminAddRmvBrunch.fxml
@@ -1,14 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.pharma.controllers.adminAddRmvBrunch"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="516.0" prefWidth="700.0" style="-fx-background-color: #02462f;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pharma.controllers.adminAddRmvBrunch">
+   <children>
+      <TableView layoutY="253.0" prefHeight="268.0" prefWidth="700.0">
+        <columns>
+          <TableColumn prefWidth="166.39996945858002" style="-fx-background-color: #b6fcca; -fx-border-color: #000000;" text="Branch Name" />
+          <TableColumn prefWidth="170.4000244140625" style="-fx-background-color: #b6fcca; -fx-border-color: #000000;" text="Location " />
+            <TableColumn prefWidth="185.60000610351562" style="-fx-background-color: #b6fcca; -fx-border-color: #000000;" text="Company" />
+            <TableColumn prefWidth="179.199951171875" style="-fx-background-color: #b6fcca; -fx-border-color: #000000;" text="Date" />
+        </columns>
+      </TableView>
+      <TextField layoutX="151.0" layoutY="147.0" prefHeight="28.0" prefWidth="174.0" style="-fx-background-color: transparent; -fx-border-color: #b6fcca; -fx-border-width: 0 0 2 0;" />
+      <TextField layoutX="151.0" layoutY="193.0" prefHeight="28.0" prefWidth="174.0" style="-fx-background-color: transparent; -fx-border-color: #b6fcca; -fx-border-width: 0 0 2 0;" />
+      <TextField layoutX="485.0" layoutY="161.0" prefHeight="18.0" prefWidth="174.0" style="-fx-background-color: transparent; -fx-border-color: #b6fcca; -fx-border-width: 0 0 2 0;" />
+      <Label layoutX="41.0" layoutY="157.0" prefHeight="18.0" prefWidth="109.0" text="Branch Name : " textFill="#b6fcca">
+         <font>
+            <Font name="Berlin Sans FB Demi Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="41.0" layoutY="198.0" prefHeight="18.0" prefWidth="71.0" text="Location : " textFill="#b6fcca">
+         <font>
+            <Font name="Berlin Sans FB Demi Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="396.0" layoutY="207.0" prefHeight="18.0" prefWidth="71.0" text="Date : " textFill="#b6fcca">
+         <font>
+            <Font name="Berlin Sans FB Demi Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="396.0" layoutY="166.0" prefHeight="18.0" prefWidth="71.0" text="Company : " textFill="#b6fcca">
+         <font>
+            <Font name="Berlin Sans FB Demi Bold" size="14.0" />
+         </font>
+      </Label>
+      <DatePicker layoutX="485.0" layoutY="202.0" prefHeight="28.0" prefWidth="174.0" style="-fx-background-color: #b6fcca; -fx-border-color: #b6fcca; -fx-border-width: 0 0 2 0;" />
+      <Text fill="#b6fcca" layoutX="41.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Or Remove Branch" wrappingWidth="396.5366897583008">
+         <font>
+            <Font name="Berlin Sans FB Demi Bold" size="27.0" />
+         </font>
+      </Text>
+   </children>
 </AnchorPane>
