--- a/src/main/resources/adminDashboard.fxml
+++ b/src/main/resources/adminDashboard.fxml
@@ -14,8 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to top, #02462f,#01875b);" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="border_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to top, #02462f,#01875b);" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
    <left>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: linear-gradient(to top, #b6fcca,#f7faf9);" BorderPane.alignment="CENTER">
          <children>
@@ -60,7 +59,7 @@
                   <Font name="Berlin Sans FB Demi Bold" size="24.0" />
                </font>
             </Text>
-            <Button layoutX="9.0" layoutY="193.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="181.0" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="Add/Remove Brunch" textFill="#b6fcca">
+            <Button fx:id="addRmvBranch" layoutX="9.0" layoutY="193.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="181.0" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="Add/Remove Branch" textFill="#b6fcca">
                <font>
                   <Font name="Berlin Sans FB Demi Bold" size="15.0" />
                </font>
@@ -372,10 +371,6 @@
       </AnchorPane>
    </top>
    <center>
-      <ImageView fitHeight="510.0" fitWidth="667.0" opacity="0.63" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
-         <image>
-            <Image url="@images/pharmacy-concept-creative-vector-illustration-of-female-pharmacist-at-drugstore-counter-2C3XHM5-removebg-preview.png" />
-         </image>
-      </ImageView>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
