--- a/src/main/resources/adminLogin.fxml
+++ b/src/main/resources/adminLogin.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="adminLoginPg" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #02462f;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pharma.controllers.adminLogin">
+<AnchorPane fx:id="adminLoginPg" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to bottom, #02462f,#01875b);" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pharma.controllers.adminLogin">
    <children>
       <ImageView fx:id="designImage" fitHeight="274.0" fitWidth="349.0" layoutX="91.0" layoutY="264.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -82,35 +82,7 @@
             </LinearGradient>
          </fill>
       </Text>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="8.0" layoutX="56.0" layoutY="59.0" stroke="BLACK" strokeType="INSIDE" width="789.0">
-         <fill>
-            <LinearGradient endX="1.0" endY="1.0" startY="0.0719697547681404">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color red="1.0" green="1.0" blue="1.0" />
-                     </color>
-                  </Stop>
-                  <Stop offset="0.006729475100942127">
-                     <color>
-                        <Color red="1.0" green="1.0" blue="1.0" />
-                     </color>
-                  </Stop>
-                  <Stop offset="0.32926829268292684">
-                     <color>
-                        <Color red="0.24710525572299957" green="0.8526315689086914" blue="0.2368421107530594" />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="0.04206627607345581" green="0.31578946113586426" blue="0.0374269001185894" />
-                     </color>
-                  </Stop>
-               </stops>
-            </LinearGradient>
-         </fill>
-      </Rectangle>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="8.0" layoutX="56.0" layoutY="554.0" stroke="BLACK" strokeType="INSIDE" width="789.0">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="8.0" layoutX="59.0" layoutY="548.0" stroke="BLACK" strokeType="INSIDE" width="821.0">
          <fill>
             <LinearGradient endX="1.0" endY="1.0" startY="0.0719697547681404">
                <stops>
@@ -138,13 +110,18 @@
             </LinearGradient>
          </fill>
       </Rectangle>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="471.0" layoutX="852.0" layoutY="67.0" stroke="BLACK" strokeType="INSIDE" width="9.0">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="486.0" layoutX="14.0" layoutY="81.0" stroke="BLACK" strokeType="INSIDE" width="9.0">
          <fill>
-            <LinearGradient endY="0.007575755769556158" startX="0.6448863636363636" startY="1.0">
+            <LinearGradient endX="1.0" endY="0.007575755769556158" startX="0.6448863636363636" startY="1.0">
                <stops>
                   <Stop>
                      <color>
-                        <Color red="0.04206627607345581" green="0.31578946113586426" blue="0.0374269001185894" />
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.006729475100942127">
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
                      </color>
                   </Stop>
                   <Stop offset="0.32926829268292684">
@@ -154,20 +131,25 @@
                   </Stop>
                   <Stop offset="1.0">
                      <color>
-                        <Color red="1.0" green="1.0" blue="1.0" />
+                        <Color red="0.04206627607345581" green="0.31578946113586426" blue="0.0374269001185894" />
                      </color>
                   </Stop>
                </stops>
             </LinearGradient>
          </fill>
       </Rectangle>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="482.0" layoutX="39.0" layoutY="67.0" stroke="BLACK" strokeType="INSIDE" width="9.0">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="513.0" layoutX="30.0" layoutY="20.0" stroke="BLACK" strokeType="INSIDE" width="9.0">
          <fill>
-            <LinearGradient endY="0.007575755769556158" startX="0.6448863636363636" startY="1.0">
+            <LinearGradient endX="1.0" endY="0.007575755769556158" startX="0.6448863636363636" startY="1.0">
                <stops>
                   <Stop>
                      <color>
-                        <Color red="0.04206627607345581" green="0.31578946113586426" blue="0.0374269001185894" />
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.006729475100942127">
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
                      </color>
                   </Stop>
                   <Stop offset="0.32926829268292684">
@@ -177,7 +159,7 @@
                   </Stop>
                   <Stop offset="1.0">
                      <color>
-                        <Color red="1.0" green="1.0" blue="1.0" />
+                        <Color red="0.04206627607345581" green="0.31578946113586426" blue="0.0374269001185894" />
                      </color>
                   </Stop>
                </stops>
@@ -186,7 +168,7 @@
       </Rectangle>
       <AnchorPane layoutX="462.0" layoutY="103.0" prefHeight="426.0" prefWidth="327.0" style="-fx-background-color: green;">
          <children>
-            <AnchorPane layoutX="7.0" layoutY="7.0" prefHeight="415.0" prefWidth="313.0" style="-fx-background-color: #b6fcca;">
+            <AnchorPane layoutX="7.0" layoutY="7.0" prefHeight="415.0" prefWidth="313.0" style="-fx-background-color: linear-gradient(to top, #b6fcca,#f7faf9);">
                <children>
                   <ImageView fitHeight="81.0" fitWidth="85.0" layoutX="117.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -297,5 +279,33 @@
             <Font name="Berlin Sans FB Demi Bold" size="12.0" />
          </font>
       </Button>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="8.0" layoutX="14.0" layoutY="570.0" stroke="BLACK" strokeType="INSIDE" width="778.0">
+         <fill>
+            <LinearGradient endX="1.0" endY="1.0" startY="0.0719697547681404">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.006729475100942127">
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.32926829268292684">
+                     <color>
+                        <Color red="0.24710525572299957" green="0.8526315689086914" blue="0.2368421107530594" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.04206627607345581" green="0.31578946113586426" blue="0.0374269001185894" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </fill>
+      </Rectangle>
    </children>
 </AnchorPane>
