--- a/src/main/resources/salesmanLogin.fxml
+++ b/src/main/resources/salesmanLogin.fxml
@@ -17,11 +17,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #02462f;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pharma.controllers.salesmanLogin">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to bottom, #02462f,#01875b);" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pharma.controllers.salesmanLogin">
    <children>
       <AnchorPane layoutX="476.0" layoutY="115.0" prefHeight="420.0" prefWidth="328.0" style="-fx-background-color: green;">
          <children>
-            <AnchorPane layoutX="7.0" layoutY="6.0" prefHeight="408.0" prefWidth="314.0" style="-fx-background-color: #b6fcca;">
+            <AnchorPane layoutX="7.0" layoutY="6.0" prefHeight="408.0" prefWidth="314.0" style="-fx-background-color: linear-gradient(to top, #b6fcca,#f7faf9);">
                <children>
                   <TextField alignment="CENTER" layoutX="48.0" layoutY="166.0" prefHeight="26.0" prefWidth="214.0" promptText="user name" style="-fx-background-color: transparent; -fx-border-color: #02462f; -fx-border-width: 0 0 2 0;" />
                   <TextField alignment="CENTER" layoutX="50.0" layoutY="204.0" prefHeight="26.0" prefWidth="214.0" promptText="password" style="-fx-background-color: transparent; -fx-border-color: #02462f; -fx-border-width: 0 0 2 0;" />
@@ -68,7 +68,73 @@
             </AnchorPane>
          </children>
       </AnchorPane>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="6.0" layoutX="62.0" layoutY="66.0" stroke="BLACK" strokeType="INSIDE" width="762.0">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="6.0" layoutX="21.0" layoutY="571.0" stroke="BLACK" strokeType="INSIDE" width="762.0">
+         <fill>
+            <LinearGradient endX="1.0" endY="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.006729475100942127">
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.6658536585365853">
+                     <color>
+                        <Color red="0.1904093623161316" green="0.6947368383407593" blue="0.3333021402359009" />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.8657683090962806">
+                     <color>
+                        <Color red="0.14888888597488403" green="0.6000000238418579" blue="0.13333334028720856" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.021341130137443542" green="0.4842105209827423" blue="0.005380116868764162" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </fill>
+      </Rectangle>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="6.0" layoutX="73.0" layoutY="549.0" stroke="BLACK" strokeType="INSIDE" width="801.0">
+         <fill>
+            <LinearGradient endX="1.0" endY="1.0">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.006729475100942127">
+                     <color>
+                        <Color red="1.0" green="1.0" blue="1.0" />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.6039424876079177">
+                     <color>
+                        <Color red="0.1904093623161316" green="0.6947368383407593" blue="0.3333021402359009" />
+                     </color>
+                  </Stop>
+                  <Stop offset="0.7877063979253518">
+                     <color>
+                        <Color red="0.14888888597488403" green="0.6000000238418579" blue="0.13333334028720856" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color red="0.021341130137443542" green="0.4842105209827423" blue="0.005380116868764162" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </fill>
+      </Rectangle>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="511.0" layoutX="45.0" layoutY="23.0" stroke="BLACK" strokeType="INSIDE" width="7.0">
          <fill>
             <LinearGradient endX="1.0" endY="1.0">
                <stops>
@@ -101,73 +167,7 @@
             </LinearGradient>
          </fill>
       </Rectangle>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="6.0" layoutX="62.0" layoutY="553.0" stroke="BLACK" strokeType="INSIDE" width="762.0">
-         <fill>
-            <LinearGradient endX="1.0" endY="1.0">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color red="0.021341130137443542" green="0.4842105209827423" blue="0.005380116868764162" />
-                     </color>
-                  </Stop>
-                  <Stop offset="0.37317073170731696">
-                     <color>
-                        <Color red="0.14888888597488403" green="0.6000000238418579" blue="0.13333334028720856" />
-                     </color>
-                  </Stop>
-                  <Stop offset="0.6658536585365853">
-                     <color>
-                        <Color red="0.1904093623161316" green="0.6947368383407593" blue="0.3333021402359009" />
-                     </color>
-                  </Stop>
-                  <Stop offset="0.9973082099596231">
-                     <color>
-                        <Color red="1.0" green="1.0" blue="1.0" />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="1.0" green="1.0" blue="1.0" />
-                     </color>
-                  </Stop>
-               </stops>
-            </LinearGradient>
-         </fill>
-      </Rectangle>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="480.0" layoutX="55.0" layoutY="72.0" stroke="BLACK" strokeType="INSIDE" width="7.0">
-         <fill>
-            <LinearGradient endX="1.0" endY="1.0">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color red="0.021341130137443542" green="0.4842105209827423" blue="0.005380116868764162" />
-                     </color>
-                  </Stop>
-                  <Stop offset="0.37317073170731696">
-                     <color>
-                        <Color red="0.14888888597488403" green="0.6000000238418579" blue="0.13333334028720856" />
-                     </color>
-                  </Stop>
-                  <Stop offset="0.6658536585365853">
-                     <color>
-                        <Color red="0.1904093623161316" green="0.6947368383407593" blue="0.3333021402359009" />
-                     </color>
-                  </Stop>
-                  <Stop offset="0.9973082099596231">
-                     <color>
-                        <Color red="1.0" green="1.0" blue="1.0" />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="1.0" green="1.0" blue="1.0" />
-                     </color>
-                  </Stop>
-               </stops>
-            </LinearGradient>
-         </fill>
-      </Rectangle>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="480.0" layoutX="833.0" layoutY="72.0" stroke="BLACK" strokeType="INSIDE" width="7.0">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="480.0" layoutX="27.0" layoutY="85.0" stroke="BLACK" strokeType="INSIDE" width="7.0">
          <fill>
             <LinearGradient endX="1.0" endY="1.0">
                <stops>
