--- a/src/main/resources/adminAddRmvBrunch.fxml
+++ b/src/main/resources/adminAddRmvBrunch.fxml
@@ -19,9 +19,9 @@
             <TableColumn prefWidth="179.199951171875" style="-fx-background-color: #b6fcca; -fx-border-color: #000000;" text="Date" />
         </columns>
       </TableView>
-      <TextField layoutX="151.0" layoutY="147.0" prefHeight="28.0" prefWidth="174.0" style="-fx-background-color: transparent; -fx-border-color: #b6fcca; -fx-border-width: 0 0 2 0;" />
-      <TextField layoutX="151.0" layoutY="193.0" prefHeight="28.0" prefWidth="174.0" style="-fx-background-color: transparent; -fx-border-color: #b6fcca; -fx-border-width: 0 0 2 0;" />
-      <TextField layoutX="485.0" layoutY="161.0" prefHeight="18.0" prefWidth="174.0" style="-fx-background-color: transparent; -fx-border-color: #b6fcca; -fx-border-width: 0 0 2 0;" />
+      <TextField layoutX="151.0" layoutY="147.0" prefHeight="28.0" prefWidth="174.0" style="-fx-background-color: transparent; -fx-border-color: #b6fcca; -fx-border-width: 0 0 2 0; -fx-text-fill: white;" />
+      <TextField layoutX="151.0" layoutY="193.0" prefHeight="28.0" prefWidth="174.0" style="-fx-background-color: transparent; -fx-border-color: #b6fcca; -fx-border-width: 0 0 2 0; -fx-text-fill: white;" />
+      <TextField layoutX="485.0" layoutY="161.0" prefHeight="18.0" prefWidth="174.0" style="-fx-background-color: transparent; -fx-border-color: #b6fcca; -fx-border-width: 0 0 2 0; -fx-text-fill: white;" />
       <Label layoutX="41.0" layoutY="157.0" prefHeight="18.0" prefWidth="109.0" text="Branch Name : " textFill="#b6fcca">
          <font>
             <Font name="Berlin Sans FB Demi Bold" size="14.0" />
