--- a/src/main/resources/adminLogin.fxml
+++ b/src/main/resources/adminLogin.fxml
@@ -194,12 +194,12 @@
                   </ImageView>
                   <TextField alignment="CENTER" layoutX="58.0" layoutY="149.0" prefHeight="28.0" prefWidth="190.0" promptText="user name" style="-fx-background-color: transparent; -fx-border-color: #02462f; -fx-border-width: 0px 0px 2px 0px;" />
                   <TextField alignment="CENTER" layoutX="58.0" layoutY="201.0" prefHeight="28.0" prefWidth="190.0" promptText="password" style="-fx-background-color: transparent; -fx-border-color: #02462f; -fx-border-width: 0px 0px 2px 0px;" />
-                  <Button layoutX="58.0" layoutY="274.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="190.0" styleClass="adminLoginBtns" stylesheets="@CSS/adminLogin.css" text="LOGIN" textFill="#b6fcca">
+                  <Button fx:id="adminLogintoDashboard" layoutX="58.0" layoutY="274.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="190.0" styleClass="adminLoginBtns" stylesheets="@CSS/adminLogin.css" text="LOGIN" textFill="#b6fcca">
                      <font>
                         <Font name="Berlin Sans FB Demi Bold" size="14.0" />
                      </font>
                   </Button>
-                  <Button layoutX="58.0" layoutY="313.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="190.0" styleClass="adminLoginBtns" stylesheets="@CSS/adminLogin.css" text="SIGNUP" textFill="#b6fcca">
+                  <Button fx:id="adminSignup" layoutX="58.0" layoutY="313.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="190.0" styleClass="adminLoginBtns" stylesheets="@CSS/adminLogin.css" text="SIGNUP" textFill="#b6fcca">
                      <font>
                         <Font name="Berlin Sans FB Demi Bold" size="14.0" />
                      </font>
@@ -274,7 +274,7 @@
             </AnchorPane>
          </children>
       </AnchorPane>
-      <Button layoutX="816.0" layoutY="20.0" mnemonicParsing="false" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="&lt;&lt;&lt;" textFill="#b6fcca">
+      <Button fx:id="backtorolpage" layoutX="816.0" layoutY="20.0" mnemonicParsing="false" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="&lt;&lt;&lt;" textFill="#b6fcca">
          <font>
             <Font name="Berlin Sans FB Demi Bold" size="12.0" />
          </font>
